--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,16 @@ div.attention {
 .Biggie {
     font-size: 24px;
 }
+
+.first,
+.second {
+    font-size: 28px;
+    font-family: Helvetica, 'Times New Roman', sans-serif;
+}
+.first{
+    background-color: black;
+    color: white;
+}
+.second{
+    background-color: yellow;
+}
