Complete fourth exercise

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ div.attention {
     color: white;
 }
 
-.Pink {
+.pink {
     background-color: pink;
     font-family: Verdana, "DejaVu Sans", sans-serif;
 }
@@ -21,7 +21,7 @@ div.attention {
     font-weight: bold;
 }
 
-.Biggie {
+.biggie {
     font-size: 24px;
 }
 
