Complete fifth exercise

--- a/styles.css
+++ b/styles.css
@@ -37,3 +37,10 @@ div.attention {
 .second{
     background-color: yellow;
 }
+
+div p {
+background-color: yellow;
+color: red;
+font-size: 20px;
+text-align: center;
+}
